# diycrate

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  __init__.py  application.py  diycrate_app  install_cmd.py  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  server_app.py  setup.py  tox.ini
.github/workflows/: build.yml  publish.yml
diycrate/: application.py  cache_utils.py  diycrate_app.py  file_operations.py  gui.py  item_queue_io.py  iter_utils.py  log_utils.py  logging_config.py  long_poll_processing.py  oauth_utils.py  path_utils.py  server_app.py  utils.py
function-project/: project.yml
mypy_stubs/boxsdk/auth/: oauth2.pyi
mypy_stubs/boxsdk/client/: client.pyi
mypy_stubs/boxsdk/object/: base_api_json_object.pyi  base_endpoint.pyi  base_item.pyi  base_object.pyi  cloneable.pyi  file.pyi  folder.pyi  item.pyi  user.pyi
tests/: test.py
