[build-system]
requires = ["setuptools >= 40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diycrate"
version = "0.2.11.3a1"
authors=[{"email" = "jasonsheld@gmail.com", "name"= "Jason Held"}]
dynamic = ['readme']
requires-python=">=3.6,<4"
urls={"Source"= "https://github.com/jheld/diycrate/", "Issues"= "https://github.com/jheld/diycrate/issues"}
description = "box.com for linux -- unofficial, based on python SDK"
keywords = ["cloud", "storage", "box.com", "sdk", "linux", "box"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "bottle>=0.12.8,<=0.13",
    "boxsdk>=2.0,<3.0",
    "pyinotify==0.9.6",
    "redis~=3.3.0",
    "httpx==0.22.0",
    "pyopenssl>=16.0.0",
    "cherrypy>=13.0.0",
    "python-dateutil",
    "certbot==1.12.0",
    "Send2Trash==1.8.0",
]

[project.entry-points]

[project.entry-points.console_scripts]
diycrate_app = "diycrate.diycrate_app:main"
diycrate_server = "diycrate.server_app:main"

[project.optional-dependencies]
"dev" = ["ipython", "check-manifest", "black", "flake8", "pre-commit", "mypy"]
"ci" = ["python-digitalocean"]
"test" = ["tox", "check-manifest"]
